# play-by-play-model

./: .gitignore  README.md  main.py  pbp_columns.csv  pyproject.toml
play_by_play_model/: .user.yml  dbt_project.yml  profiles.yml
play_by_play_model/models/base/: base_play_by_play_2023.sql  base_play_by_play_schema.yml  base_player_dim.sql  base_player_dim_schema.yml  base_team_dim.sql  base_team_dim_schema.yml  source.yml
play_by_play_model/models/staging/: game_dim.sql  game_dim_schema.yml  source.yml
