[tool.poetry]
name = "play-by-play-model"
version = "0.1.0"
description = "A dimensional model of NFL play by play data"
authors = ["Joshua Spratt <jspratt02@icloud.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nfl-data-py = "^0.3.1"
duckdb = "^0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
